--- a/package.json
+++ b/package.json
@@ -3,6 +3,9 @@
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
+  "engines": {
+    "node": ">= 22"
+  },
   "scripts": {
     "dev": "tsx watch src/server.ts",
     "knex": "node --no-warnings --import tsx ./node_modules/knex/bin/cli.js",
@@ -13,6 +16,14 @@
   "keywords": [],
   "author": "",
   "license": "ISC",
+    "dependencies": {
+    "@fastify/cookie": "^11.0.2",
+    "dotenv": "^17.2.3",
+    "fastify": "^5.6.1",
+    "knex": "^3.1.0",
+    "pg": "^8.16.3",
+    "zod": "^4.1.12"
+  },
   "devDependencies": {
     "@rocketseat/eslint-config": "^1.2.0",
     "@types/node": "^18.19.130",
@@ -22,14 +33,7 @@
     "tsup": "^8.5.0",
     "tsx": "^3.14.0",
     "typescript": "^4.9.5",
-    "vitest": "^4.0.2"
-  },
-  "dependencies": {
-    "@fastify/cookie": "^11.0.2",
-    "dotenv": "^17.2.3",
-    "fastify": "^5.6.1",
-    "knex": "^3.1.0",
-    "sqlite3": "^5.1.7",
-    "zod": "^4.1.12"
+    "vitest": "^4.0.2",
+    "sqlite3": "^5.1.7"
   }
 }
